--- a/connectives.ipynb
+++ b/connectives.ipynb
@@ -2,35 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.2.2 -> 23.0.1\n",
-      "[notice] To update, run: C:\\Users\\lyonsl2\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: seaborn in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (0.12.2)\n",
-      "Requirement already satisfied: numpy!=1.24.0,>=1.17 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from seaborn) (1.24.2)\n",
-      "Requirement already satisfied: pandas>=0.25 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from seaborn) (1.4.3)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.1 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from seaborn) (3.5.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (0.11.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (2.8.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (21.3)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (3.0.9)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (1.4.4)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (8.2.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (4.36.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from pandas>=0.25->seaborn) (2022.4)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\lyonsl2\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.1->seaborn) (1.16.0)\n"
+      "C:\\Users\\lyonsl2\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\lyonsl2\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
+      "C:\\Users\\lyonsl2\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas64__v0.3.21-gcc_10_3_0.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n",
+      "C:\\Users\\lyonsl2\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.2\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
      ]
     }
    ],
@@ -44,7 +28,6 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import jaccard_score\n",
     "import matplotlib.pyplot as plt\n",
-    "!pip install seaborn\n",
     "import seaborn as sns\n",
     "\n",
     "# Read the data\n",
@@ -92,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +133,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>gerund</th>\n",
+       "      <th>rel_deps</th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>num_cc</th>\n",
+       "      <th>num_conj</th>\n",
+       "      <th>num_punct</th>\n",
+       "      <th>num_gerund_cc</th>\n",
+       "      <th>num_gerund_conj</th>\n",
+       "      <th>num_gerund_punct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>vp-ing</td>\n",
+       "      <td>hearing</td>\n",
+       "      <td>[(xcomp, hearing, 5, remember, 4), (obj, phras...</td>\n",
+       "      <td>I do n't remember hearing the phrase \" white g...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>vp-ing</td>\n",
+       "      <td>Growing</td>\n",
+       "      <td>[(advcl, Growing, 1, had, 10), (compound:prt, ...</td>\n",
+       "      <td>Growing up black in the 1950s , I never had th...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vp-ing</td>\n",
+       "      <td>having</td>\n",
+       "      <td>[(conj, irritability, 17, see, 3), (mark, at, ...</td>\n",
+       "      <td>I can see now that possibly she was , but then...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>vp-ing</td>\n",
+       "      <td>feeling</td>\n",
+       "      <td>[(xcomp, feeling, 4, remember, 3), (obj, sympa...</td>\n",
+       "      <td>I can remember feeling a certain sympathy for ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>vp-ing</td>\n",
+       "      <td>drawing</td>\n",
+       "      <td>[(advcl, victimizing, 16, feeling, 4), (mark, ...</td>\n",
+       "      <td>I can remember feeling a certain sympathy for ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55054</th>\n",
+       "      <td>vp-ing</td>\n",
+       "      <td>restraining</td>\n",
+       "      <td>[(mark, for, 5, restraining, 6), (acl, restrai...</td>\n",
+       "      <td>The main government tools for restraining both...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55055</th>\n",
+       "      <td>vp-ing</td>\n",
+       "      <td>restraining</td>\n",
+       "      <td>[(mark, In, 1, restraining, 2), (advcl, restra...</td>\n",
+       "      <td>In restraining such growth , allocation by pri...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55056</th>\n",
+       "      <td>vp-ing</td>\n",
+       "      <td>learning</td>\n",
+       "      <td>[(obl, negotiations, 8, allow, 5), (punct, ,, ...</td>\n",
+       "      <td>Therefore , change must allow for complex nego...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55057</th>\n",
+       "      <td>vp-ing</td>\n",
+       "      <td>creating</td>\n",
+       "      <td>[(mark, of, 7, creating, 8), (advcl, creating,...</td>\n",
+       "      <td>Political wisdom , therefore , consists of cre...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55058</th>\n",
+       "      <td>vp-ing</td>\n",
+       "      <td>supporting</td>\n",
+       "      <td>[(xcomp, acknowledge, 5, wishes, 3), (mark, fo...</td>\n",
+       "      <td>The author wishes to acknowledge the Anglo-Ger...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>55059 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         type       gerund                                           rel_deps  \\\n",
+       "0      vp-ing      hearing  [(xcomp, hearing, 5, remember, 4), (obj, phras...   \n",
+       "1      vp-ing      Growing  [(advcl, Growing, 1, had, 10), (compound:prt, ...   \n",
+       "2      vp-ing       having  [(conj, irritability, 17, see, 3), (mark, at, ...   \n",
+       "3      vp-ing      feeling  [(xcomp, feeling, 4, remember, 3), (obj, sympa...   \n",
+       "4      vp-ing      drawing  [(advcl, victimizing, 16, feeling, 4), (mark, ...   \n",
+       "...       ...          ...                                                ...   \n",
+       "55054  vp-ing  restraining  [(mark, for, 5, restraining, 6), (acl, restrai...   \n",
+       "55055  vp-ing  restraining  [(mark, In, 1, restraining, 2), (advcl, restra...   \n",
+       "55056  vp-ing     learning  [(obl, negotiations, 8, allow, 5), (punct, ,, ...   \n",
+       "55057  vp-ing     creating  [(mark, of, 7, creating, 8), (advcl, creating,...   \n",
+       "55058  vp-ing   supporting  [(xcomp, acknowledge, 5, wishes, 3), (mark, fo...   \n",
+       "\n",
+       "                                                sentence  num_cc  num_conj  \\\n",
+       "0      I do n't remember hearing the phrase \" white g...       0         0   \n",
+       "1      Growing up black in the 1950s , I never had th...       0         0   \n",
+       "2      I can see now that possibly she was , but then...       0         1   \n",
+       "3      I can remember feeling a certain sympathy for ...       0         0   \n",
+       "4      I can remember feeling a certain sympathy for ...       0         0   \n",
+       "...                                                  ...     ...       ...   \n",
+       "55054  The main government tools for restraining both...       0         0   \n",
+       "55055  In restraining such growth , allocation by pri...       0         0   \n",
+       "55056  Therefore , change must allow for complex nego...       0         1   \n",
+       "55057  Political wisdom , therefore , consists of cre...       0         0   \n",
+       "55058  The author wishes to acknowledge the Anglo-Ger...       0         0   \n",
+       "\n",
+       "       num_punct  num_gerund_cc  num_gerund_conj  num_gerund_punct  \n",
+       "0              0              0                0                 0  \n",
+       "1              0              0                0                 0  \n",
+       "2              0              0                0                 0  \n",
+       "3              0              0                0                 0  \n",
+       "4              0              0                0                 0  \n",
+       "...          ...            ...              ...               ...  \n",
+       "55054          0              0                0                 0  \n",
+       "55055          0              0                0                 0  \n",
+       "55056          1              0                1                 1  \n",
+       "55057          0              0                0                 0  \n",
+       "55058          0              0                0                 0  \n",
+       "\n",
+       "[55059 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +387,7 @@
        "Name: type, dtype: float64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +413,7 @@
        "Name: type, dtype: float64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +439,7 @@
        "Name: type, dtype: float64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +465,7 @@
        "Name: type, dtype: float64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +491,7 @@
        "Name: type, dtype: float64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +517,7 @@
        "Name: type, dtype: float64"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +543,7 @@
        "Name: type, dtype: float64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +563,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -362,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +593,7 @@
        "'It is obvious that this was a rather shameful encounter for all concerned -- my friend and I , as his silent accomplice , trading on our racial pain , tampering with a stranger for no reason , and the stranger then buying his way out of the situation for twenty dollars , a sum that was generous by one count and cheap by another .'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
